--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,132 @@ aside{
     border-radius: 5px;
     padding: 10px 30px;
 }
+
+main{
+    background-color: var(--itens-background);
+    border-radius: 10px;
+    padding: 32px;
+    display: flex;
+    gap: 24px;
+}
+
+h2{
+    font-size: 26px;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+form div label{
+    font-size: 18px;
+    font-weight: 800;
+    display: block;
+    margin-bottom: 8px;
+}
+
+form div input, textarea {
+    width: 100%;
+    padding: 16px;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    line-height: 22px;
+    background-color: var(--secondary-color);
+    font-family: var(--font-family);
+}
+
+form div input{
+    height: 39px;
+}
+
+textarea{
+    height: 161px;
+}
+
+.lista-tags{
+    display: flex;
+}
+
+.lista-tags li{
+    display: flex;
+    background-color: var(--secondary-color);
+    color: var(--background-color);
+    gap: 10px;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+
+.container-botoes{
+    display: flex;
+    gap: 25px;
+    justify-content: space-between;
+}
+
+.container-botoes button{
+    width: 50%;
+    padding: 12px 32px 12px 12px;
+    text-align: center;
+    border-radius: 10px;
+    font-family: var(--font-family);
+
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.botao-descartar{
+    background-color: var(--itens-background);
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    position: relative;
+}
+
+.botao-descartar::after{
+    content: '';
+    background-image: url("./img/trash.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 8px;
+}
+
+.botao-publicar{
+    background-color: var(--primary-color);
+    color: var(--itens-background);
+    border: none;
+    position: relative;
+}
+
+.botao-publicar::after{
+    content: '';
+    background-image: url("./img/arrow_forward2.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 8px;
+}
+
+.container-descricao{
+    width: 422px;
+}
+
+.main-imagem{
+    border-radius: 10px;
+    height: 100%;
+    object-fit: cover;
+}
